--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: 🧪 Create .env file
+        run: echo "${{ secrets.ENV_FILE }}" > .env
+
       - name: Analyze code
         run: flutter analyze
 
