--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -37,7 +37,7 @@ jobs:
         run: flutter analyze || true
 
       - name: Build APK
-        run: flutter build apk --release
+        run: flutter build apk --release --no-tree-shake-icons
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
